# podcast-pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL_NOTES.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: basic_pipeline.py  custom_provider.py
podcast_pipeline/: __init__.py  cleaner.py  cli.py  downloader.py  llm_client.py  summarizer.py  transcriber.py
